<resources>
    <string name="app_name">Proyecto_Marvel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido_a_la_api_de_series">Bienvenido a la API de Series</string>
    <string name="agregar_serie">Agregar Serie</string>
    <string name="id">Id</string>
    <string name="t_tulo">Título</string>
    <string name="descripci_n">Descripción</string>
    <string name="uri_del_recurso">URI del recurso</string>
    <string name="a_o_de_inicio">Año de inicio</string>
    <string name="a_o_de_fin">Año de fin</string>
</resources>